testapp/lb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
  labels:
    app: testapp
spec:
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
  selector:
    app: testapp
