testapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "testapp-service"
  labels:
    app: testapp
spec:
  ports:
    - port: 10080
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: testapp
